# tao-daft

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  format_change.yml  format_or_converter_proposal.yml
examples/: README.md
examples/datasets/cosmos-reason-v1.0/: README.md
examples/datasets/cosmos-reason-v1.0/its_anomaly/: meta.json
examples/datasets/cosmos-reason-v1.0/its_collision/: meta.json
examples/datasets/metropolis-v3.0/: README.md
examples/datasets/tao-vl-reason-v1.0/: README.md
examples/datasets/tao-vl-reason-v1.0/its_anomaly/: grounding.json  video_description.json  vqa.json
examples/datasets/tao-vl-reason-v1.0/its_collision/: bcq.json  bcq_openended.json  causal_linkage.json  mcq.json  mcq_openended.json  open_qa.json  scene_description.json  temporal_description.json  temporal_localization.json  video_summarization.json
examples/datasets/tao-vl-reason-v1.0/its_collision_no_copy_media/: bcq.json  bcq_openended.json  causal_linkage.json  mcq.json  mcq_openended.json  open_qa.json  scene_description.json  temporal_description.json  temporal_localization.json  video_summarization.json
src/nvidia_tao_daft/: __init__.py
src/nvidia_tao_daft/cli/: README.md  __init__.py  cli.py
src/nvidia_tao_daft/converters/: README.md  __init__.py  base.py
src/nvidia_tao_daft/converters/pairs/: metropolis_v3_0_to_cosmos_reason_v1_0.py  metropolis_v3_0_to_tao_vl_reason_v1_0.py
src/nvidia_tao_daft/datasets/: README.md  tao_vl_reason_v1_0.py
src/nvidia_tao_daft/formats/: README.md  versioning.md
src/nvidia_tao_daft/formats/cosmos-reason-v1.0/: README.md
src/nvidia_tao_daft/formats/metropolis-v3.0/: README.md
src/nvidia_tao_daft/formats/tao-vl-reason-v1.0/: README.md
src/nvidia_tao_daft/utils/: __init__.py  cosmos_reason_v1_0.py  metropolis_v3_0.py  tao_vl_reason_v1_0.py  utils.py
src/nvidia_tao_daft/validators/: README.md  __init__.py  base.py  common.py
src/nvidia_tao_daft/validators/cosmos_reason_v1_0/: __init__.py  validator.py
src/nvidia_tao_daft/validators/metropolis_v3_0/: __init__.py  validator.py
src/nvidia_tao_daft/validators/tao_vl_reason_v1_0/: __init__.py  validator.py
tests/: conftest.py  test_base_validator.py  test_cli.py  test_contextual_schemas_metropolis_v3_0.py  test_converter_metropolis_v3_0_to_cosmos_reason_v1_0.py  test_converter_metropolis_v3_0_to_tao_vl_reason_v1_0.py  test_package.py  test_schema_doc_consistency.py  test_task_schemas_metropolis_v3_0.py  test_utils.py  test_validator_cosmos_reason_v1_0.py  test_validator_metropolis_v3_0.py  test_validator_tao_vl_reason_v1_0.py
tests/data/metropolis-v3.0/valid-contextual/: chunks_valid.json  msted_valid.json
tests/data/metropolis-v3.0/valid-tasks/: bcq_invalid_answer.json  bcq_invalid_extra_fields.json  bcq_invalid_missing_question.json  bcq_openended_invalid_answer.json  bcq_openended_valid.json  bcq_valid.json  causal_linkage_valid.json  (+14 more)
(+97 files in other folders)
