[project]
name = "nvidia-tao-daft"
version = "7.0.0"
description = "NVIDIA TAO Dataset Annotation Format Toolkit - A comprehensive toolkit for organizing, validating, and loading annotated datasets for computer vision and vision-language models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = [
    "computer-vision",
    "dataset",
    "annotation",
    "tao",
    "nvidia",
    "vision-language-models",
    "object-detection",
    "tracking",
    "validation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "jsonschema>=4.20.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/NVIDIA-TAO/tao-daft"
Documentation = "https://github.com/NVIDIA-TAO/tao-daft/blob/main/README.md"
Repository = "https://github.com/NVIDIA-TAO/tao-daft"
Issues = "https://github.com/NVIDIA-TAO/tao-daft/issues"

[project.scripts]
tao-daft = "nvidia_tao_daft.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nvidia_tao_daft"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "black>=26.3.1",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.uv]
managed = true
constraint-dependencies = [
    "urllib3>=2.7.0",
    "requests>=2.33.1",
    "Pygments>=2.20.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
tmp_path_retention_policy = "failed"
addopts = [
    "--cov=nvidia_tao_daft",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
]
